Modify badges names + Fix alignment problem

--- a/views/list.pug
+++ b/views/list.pug
@@ -39,7 +39,7 @@ block content
 
   div(style="display:flex;align-items:center")
     span
-      b MileStones:
+      b Milestones:
 
     svg.ick-0(height="100px" width="100px")
       use(xlink:href="#annot-ds")
