In medal table, add Bronze, Silver, Gold Change title page BugFix: in medal table, bronze BugFix: Stack icone for Chrome

--- a/views/list.pug
+++ b/views/list.pug
@@ -64,6 +64,16 @@ block content
     svg.ick-10(height="100px" width="100px")
       use(xlink:href="#annot-ds")
 
+  div(style="display:flex;align-items:center")
+    span
+      b Stack:
+
+    svg.ick-10(height="110px" width="174px")
+      use(xlink:href="#stack")
+      g(transform="translate(40,0)")
+        use(xlink:href="#annot-ds")
+
+
   
   #{glyphs}
   
